# PyRIT

./: .env_example  .env_local_example  .gitignore  .pre-commit-config.yaml  .pyrit_conf_example  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  gui-deploy.yml  pyproject.toml  pyrightconfig.json
.azuredevops/: end-to-end-tests.yml  integration-tests.yml  partner-integration-tests.yml  scheduled-test-pipeline-template.yml  test-job-template.yml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_setup.sh  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  docs-versions.yml
.github/ISSUE_TEMPLATE/: praise.md
.github/instructions/: attacks.instructions.md  converters.instructions.md  datasets.instructions.md  docs.instructions.md  frontend-style-guide.instructions.md  frontend-test.instructions.md  models.instructions.md  output.instructions.md  scenarios.instructions.md  scorers.instructions.md  setup-techniques.instructions.md  style-guide.instructions.md  targets.instructions.md  test.instructions.md
.github/workflows/: build_and_test.yml  diff_cover.yml  docker_build.yml  docs.yml  frontend_tests.yml  triage-feedback.yml
build_scripts/: check_async_suffix.py  check_links.py  check_no_rest_roles.py  compose_docs_dist.py  enforce_alembic_revision_immutability.py  env_local_integration_test  evaluate_scorers.py  gen_api_md.py  generate_pages_manifest.py  generate_rss.py  inject_version_picker.py  memory_migrations.py  migrate_prod_memory_schema.py  prepare_package.py  preview_server.py  pydoc2json.py  resolve_docs_matrix.py  sanitize_notebook_paths.py  strip_notebook_progress_bars.py  strip_py_kernelspec.py  validate_docs.py
build_scripts/version_picker_assets/: closest_page.js  picker.js
doc/: bibliography.md  index.md  myst.yml  references.bib
doc/_static/: custom.js
doc/blog/: 2024_12_3.md  2025_01_27.md  2025_02_11.md  2025_03_03.md  2025_06_06.md  2026_04_14_scoring_scorers.md  2026_07_09_scenarios.md
doc/code/: architecture.md  framework.md  user_guide.md
doc/contributing/: 10_release_process.md  11_memory_models.md  1_git.md  2_incorporating_research.md  3_style_guide.md  4_running_tests.md  5_unit_tests.md  6_integration_tests.md  7_notebooks.md  8_pre_commit.md  9_exception.md  README.md
doc/cookbooks/: 1_sending_prompts.ipynb  2_precomputing_turns.ipynb  2_precomputing_turns.py  5_psychosocial_harms.ipynb  5_psychosocial_harms.py
doc/css/: custom.css
doc/generate_docs/: pct_to_ipynb.py
doc/getting_started/: README.md  configuration.md  install.md  install_devcontainers.md  install_docker.md  install_local.md  install_local_dev.md  populating_secrets.md  pyrit_conf.md
doc/gui/: 0_gui.md
doc/scanner/: 0_scanner.md  1_pyrit_scan.ipynb  1_pyrit_scan.py  2_pyrit_shell.md  airt.ipynb  airt.py  benchmark.ipynb  benchmark.py  foundry.ipynb  foundry.py  garak.ipynb  garak.py  pyrit_conf.yaml
doc/setup/: pyrit_conf.md
docker/: Dockerfile  QUICKSTART.md  README.md  docker-compose.yaml  run_pyrit_docker.py  start.sh
frontend/: .npmrc  README.md  dev.py  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/e2e/: _targets.ts  accessibility.spec.ts  api.spec.ts  chat.spec.ts  config.spec.ts  converters.spec.ts  errors.spec.ts  flows.spec.ts  history.spec.ts  noSkippedTestsReporter.ts  routing.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts
infra/: DEPLOY_NEW_INSTANCE.md  README.md  deploy_instance.py  env.demo.template  main.bicep  main.json  parameters.demo.json  parameters.example.json  teardown_instance.py
pyrit/: __init__.py  show_versions.py
pyrit/analytics/: __init__.py  conversation_analytics.py  result_analysis.py  technique_analysis.py
pyrit/auth/: __init__.py  azure_auth.py  azure_storage_auth.py  copilot_authenticator.py  manual_copilot_authenticator.py  openai_auth.py
pyrit/auxiliary_attacks/: __init__.py
pyrit/backend/: README.md  main.py  pyrit_backend.py
pyrit/cli/: _banner.py  _cli_args.py  _config_reader.py  _output.py  _server_launcher.py  api_client.py  frontend_core.py  pyrit_backend.py  pyrit_scan.py  pyrit_shell.py
pyrit/common/: __init__.py  apply_defaults.py  brick_contract.py  cli_helpers.py  csv_helper.py  data_url_converter.py  default_values.py  deprecation.py  display_response.py  download_hf_model.py  json_helper.py  net_utility.py  notebook_utils.py  parameter.py  path.py  question_answer_helpers.py  safe_extract.py  text_helper.py  utils.py  yaml_loadable.py
pyrit/converter/: __init__.py  add_image_text_converter.py  add_image_to_video_converter.py  add_text_image_converter.py  arabic_presentation_form_converter.py  arabizi_converter.py  ascii_art_converter.py  ask_to_decode_converter.py  atbash_converter.py  audio_echo_converter.py  audio_frequency_converter.py  audio_speed_converter.py  audio_volume_converter.py  audio_white_noise_converter.py  azure_speech_audio_to_text_converter.py  azure_speech_text_to_audio_converter.py  base2048_converter.py  base64_converter.py  base_image_text_converter.py  base_image_to_image_converter.py  bidi_converter.py  bin_ascii_converter.py  binary_converter.py  braille_converter.py  caesar_converter.py  character_space_converter.py  charswap_attack_converter.py  codechameleon_converter.py  colloquial_wordswap_converter.py  converter.py  decomposition_converter.py  denylist_converter.py  diacritic_converter.py  ecoji_converter.py  emoji_converter.py  first_letter_converter.py  flip_converter.py  image_color_saturation_converter.py  image_compression_converter.py  image_overlay_converter.py  (+47 more)
pyrit/embedding/: openai_text_embedding.py
pyrit/exceptions/: __init__.py  exception_classes.py  exception_context.py  exceptions_helpers.py  retry_collector.py
pyrit/identifiers/: __init__.py  atomic_attack_identifier.py  class_name_utils.py  component_identifier.py  evaluation_identifier.py  identifier_filters.py
pyrit/memory/: __init__.py  azure_sql_memory.py  central_memory.py  memory_embedding.py  memory_exporter.py  (+4 more)
(+2245 files in other folders)
